cmake_minimum_required(VERSION 3.21)
project(LeetCode_Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_Cpp main.cpp)

add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(13-roman-to-integer leetcode/editor/cn/13-roman-to-integer.cpp)
add_executable(202-happy-number leetcode/editor/cn/202-happy-number.cpp)