cmake_minimum_required(VERSION 3.21)
project(LeetCode_Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_Cpp main.cpp)

add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(13-roman-to-integer leetcode/editor/cn/13-roman-to-integer.cpp)
add_executable(202-happy-number leetcode/editor/cn/202-happy-number.cpp)
add_executable(26-remove-duplicates-from-sorted-array leetcode/editor/cn/26-remove-duplicates-from-sorted-array.cpp)
add_executable(27-remove-element leetcode/editor/cn/27-remove-element.cpp)
add_executable(binary-search common-algorithm/二分查找.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(66-plus-one leetcode/editor/cn/66-plus-one.cpp)
add_executable(88-merge-sorted-array leetcode/editor/cn/88-merge-sorted-array.cpp)
add_executable(169-majority-element leetcode/editor/cn/169-majority-element.cpp)
add_executable(118-pascals-triangle leetcode/editor/cn/118-pascals-triangle.cpp)
add_executable(119-pascals-triangle-ii leetcode/editor/cn/119-pascals-triangle-ii.cpp)
add_executable(14-longest-common-prefix leetcode/editor/cn/14-longest-common-prefix.cpp)
add_executable(20-valid-parentheses leetcode/editor/cn/20-valid-parentheses.cpp)