cmake_minimum_required(VERSION 3.21)
project(LeetCode_Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_Cpp main.cpp)

add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(13-roman-to-integer leetcode/editor/cn/13-roman-to-integer.cpp)
add_executable(202-happy-number leetcode/editor/cn/202-happy-number.cpp)
add_executable(26-remove-duplicates-from-sorted-array leetcode/editor/cn/26-remove-duplicates-from-sorted-array.cpp)
add_executable(27-remove-element leetcode/editor/cn/27-remove-element.cpp)
add_executable(binary-search common-algorithm/二分查找.cpp)
add_executable(35-search-insert-position leetcode/editor/cn/35-search-insert-position.cpp)
add_executable(66-plus-one leetcode/editor/cn/66-plus-one.cpp)
add_executable(88-merge-sorted-array leetcode/editor/cn/88-merge-sorted-array.cpp)
add_executable(169-majority-element leetcode/editor/cn/169-majority-element.cpp)
add_executable(118-pascals-triangle leetcode/editor/cn/118-pascals-triangle.cpp)
add_executable(119-pascals-triangle-ii leetcode/editor/cn/119-pascals-triangle-ii.cpp)
add_executable(14-longest-common-prefix leetcode/editor/cn/14-longest-common-prefix.cpp)
add_executable(20-valid-parentheses leetcode/editor/cn/20-valid-parentheses.cpp)
add_executable(28-implement-strstr leetcode/editor/cn/28-implement-strstr.cpp)
add_executable(58-length-of-last-word leetcode/editor/cn/58-length-of-last-word.cpp)
add_executable(67-add-binary leetcode/editor/cn/67-add-binary.cpp)
add_executable(125-valid-palindrome leetcode/editor/cn/125-valid-palindrome.cpp)
add_executable(168-excel-sheet-column-title leetcode/editor/cn/168-excel-sheet-column-title.cpp)
add_executable(171-excel-sheet-column-number leetcode/editor/cn/171-excel-sheet-column-number.cpp)
add_executable(121-best-time-to-buy-and-sell-stock leetcode/editor/cn/121-best-time-to-buy-and-sell-stock.cpp)
add_executable(205-isomorphic-strings leetcode/editor/cn/205-isomorphic-strings.cpp)
add_executable(9-palindrome-number leetcode/editor/cn/9-palindrome-number.cpp)
add_executable(69-sqrtx leetcode/editor/cn/69-sqrtx.cpp)
add_executable(258-add-digits leetcode/editor/cn/258-add-digits.cpp)
add_executable(11-container-with-most-water leetcode/editor/cn/11-container-with-most-water.cpp)
add_executable(42-trapping-rain-water leetcode/editor/cn/42-trapping-rain-water.cpp)
add_executable(70-climbing-stairs leetcode/editor/cn/70-climbing-stairs.cpp)
add_executable(191-number-of-1-bits leetcode/editor/cn/191-number-of-1-bits.cpp)
add_executable(136-single-number leetcode/editor/cn/136-single-number.cpp)